--- a/style.css
+++ b/style.css
@@ -10,9 +10,13 @@ a {
 }
 
 #game-container {
+  width: 700px;
+  margin: auto;
   align-items: center;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 25px;
+  gap: 0;
 }
 
 .game-box {
